--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI='mongodb+srv://Alex:alex123456@cluster-alex.wzfeo.mongodb.net/dashboard'
+MONGO_URI='mongodb+srv://Alex:password@cluster-alex.wzfeo.mongodb.net/namedb'
 JWT_SECRET='YOURJWTSECRETCHANGEIT'
 ENCRYPT_JWT_SECRET='YOURJWTENCRIPTINGPASSCHANGEIT'
 JWT_EXPIRATION=30m
